--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 AR_Wetlands_Source_Files.zip filter=lfs diff=lfs merge=lfs -text
+Documentation/AR_Wetlands_Web_Demo_video.mp4 filter=lfs diff=lfs merge=lfs -text
